--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "setup": "npm install && cd client && npm install",
     "start": "node server/server.js",
-    "server": "nodemon server/server.js ",
     "client": "cd client && npm start",
+    "server": "nodemon server/server.js ",
     "dev": "concurrently --kill-others-on-fail \"npm run server\" \"npm run client\"",
     "heroku-postbuild": "cd client && npm install --only=dev && npm install && npm run build"
   },
@@ -18,10 +18,10 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "mongoose": "^5.13.7",
-    "nodemon": "^2.0.12"
+    "nodemon": "^2.0.12",
+    "concurrently": "^6.2.1"
   },
   "devDependencies": {
-    "concurrently": "^6.2.1",
     "nodemon": "^2.0.12"
   },
   "engines": {
